# deepstream-rtsp-pipeline

./: .dockerignore  .gitignore  CONTEXT.md  DeepStream_Pipeline_PRD.md  MILESTONES.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: unit-tests.yml
configs/: mediamtx.yml  nvinfer_primary.txt  tracker_bytetrack.yml  tracker_iou.yml  tracker_nvdcf.yml
docker/: Dockerfile  init_models.py
docs/: isp-and-camera-input.md  jetson-upgrade.md  system-design.md
metrics/: batch_bench.sh  benchmark_engines.sh  csv_sink.py  decode_comparison.ipynb  evaluate_tracker.py  health_monitor.py  model_gate.py  perf_monitor.py  profile_decode.py  stability.ipynb  stability_run.sh  throughput_run.sh  tracker_comparison.ipynb  validate_accuracy.py
metrics/results/: accuracy.json  batch_1.json  batch_100.json  batch_15.json  batch_2.json  batch_20.json  batch_25.json  batch_3.json  batch_33.json  batch_system_metrics.json  fp16_base.json  fp16_decode.json  fp32_base.json  stability_live.json  system_metrics.json  throughput_unthrottled.json  tracker_metrics_bytetrack.json  tracker_metrics_iou.json  tracker_metrics_nvdcf.json
models/: convert.py  decode_engine.py  export_yolo26.py  output_parser.py
pipelines/: anonymisation.py  frame_accessor.py  metadata_parser.py  multi_stream.py  rtsp.py  structured_log.py
plugins/yolo26_decode/: CMakeLists.txt  build_engine.cpp  yolo26_decode_kernel.cu  yolo26_decode_kernel.cuh  yolo26_decode_plugin.cpp  yolo26_decode_plugin.hpp
tests/integration/: test_motmetrics_integration.py
tests/smoke/: test_pipeline_smoke.py
tests/unit/: test_anonymisation.py  test_convert.py  test_csv_sink.py  test_decode_engine.py  test_evaluate_tracker.py  test_export_yolo26.py  test_frame_accessor.py  test_health_monitor.py  test_init_models.py  test_metadata_parser.py  test_model_gate.py  test_multi_stream.py  test_output_parser.py  test_perf_monitor.py  test_profile_decode.py  test_rtsp_pipeline.py  test_structured_log.py  test_validate_accuracy.py
