[project]
name = "deepstream-rtsp-pipeline"
version = "0.1.0"
description = "DeepStream RTSP pipeline with YOLOv8, multi-tracker comparison, and TensorRT C++ decode plugin"
requires-python = ">=3.10"

# Runtime deps installable via pip inside the NGC container.
# NOTE: pyds (DeepStream Python bindings) is NOT pip-installable —
# it is pre-installed in nvcr.io/nvidia/deepstream:7.1-triton-multiarch.
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.7",
    "ultralytics>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "motmetrics>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a physical NVIDIA GPU and the NGC DeepStream container (run with --gpu)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
